--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.19.0",
     "ejs": "~1.0.0",
     "express": "~4.0.0",
+    "express-fileupload": "^1.1.6-alpha.4",
     "mysql": "*"
   }
 }
